--- a/concept-notes.html
+++ b/concept-notes.html
@@ -12,19 +12,19 @@
   <h1 class="main-heading wrapper">Concept Notes</h1>
 
   <div class="content wrapper notes-content">
-    <h2><i class="far fa-bookmark topic-heading"></i> HTML &lt;canvas&gt;</h2>
+    <h2><i class="far fa-bookmark topic-heading"></i> Data Structures</h2>
     <hr>
-    <p>Create drawings, animations and games with HTML &lt;canvas&gt;.</p>
+    <p>Manage program data with data structures.</p>
 
     <ol class="pl">
       <li>
         <div class="li-div">
-          <a href="/hacs/concept-pages/point-in-rect.html">Point in Rectangle</a>
+          <a href="/hacs/concept-pages/ds-intro.html">Intro to Data Structures</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="/hacs/concept-pages/point-in-circle.html">Point in Circle</a>
+          <a href="/hacs/concept-pages/point-in-circle.html">Array Basics</a>
         </div>
       </li>
 
