finish ds-intro

--- a/concept-pages/ds-intro.html
+++ b/concept-pages/ds-intro.html
@@ -16,13 +16,8 @@
     <h1>Intro to Data Structures</h1>
 
     <p>A data structure is a structure for storing data.</p>
-    <p>Some types of data structures include:</p>
-    <ul>
-      <li>Arrays</li>
-      <li>Objects <em>(Associative Arrays)</em></li>
-      <li>Arrays of Arrays</li>
-      <li>Arrays of Objects</li>
-    </ul>
+    <p>Some common data structures are: arrays, objects <em>(associative arrays)</em>, arrays of arrays and arrays of
+      objects.</p>
 
     <!--
     <h4>Linear Search Explanation (6:33)</h4>
@@ -49,11 +44,15 @@ let vowels = ["a", "e", "i", "o", "u"];
     <hr>
     <p>An object <em>(Associative Array)</em> is a collection of property-value pairs.</p>
     <pre><code class="lang-js">
+// One line definition of object
+let point = { x: 2, y: 3, label: "A"};
+
+// Same thing but on multiple lines to more clearly see individual properties
 let point = {
   x: 2,
   y: 3,
   label: "A"
-}
+};
     </code></pre>
 
     <!-- ARRAYS OF ARRAYS -->
