--- a/concept-notes.html
+++ b/concept-notes.html
@@ -2,6 +2,22 @@
 <html>
 
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>HACS</title>
+
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Economica&family=Open+Sans&family=Raleway:wght@300&display=swap"
+    rel="stylesheet">
+
+  <!-- Page Icon -->
+  <link rel="shortcut icon" type="image/png" href="/hacs/img/ainlay-logo-blue-white.png">
+
+  <!-- Style Sheets -->
+  <link rel="stylesheet" href="/hacs/css/style.css">
+  <link href="/hacs/css/prism.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -36,7 +52,6 @@
   <script src="https://kit.fontawesome.com/5da9f5ff62.js" crossorigin="anonymous"></script>
   <script src="/hacs/js/main.js"></script>
   <script>
-    loadHead();
     loadNav("", "", "", "active");
   </script>
 
