--- a/concept-pages/ds-array-basics.html
+++ b/concept-pages/ds-array-basics.html
@@ -78,6 +78,16 @@ console.log("3rd element at index 2 is: " + letterArray[2]);
 console.log("4th element at index 3 is: " + letterArray[3]);
 </code></pre>
 
+    <!-- Topic -->
+    <h2><i class="far fa-bookmark topic-heading"></i> Modify Elements with [ ]</h2>
+    <hr>
+    <p>The index operator may be used to reassign / modify array elements.</p>
+    <pre><code class="lang-js">
+let nums = [1, 2, 3, 4, 5, 6];
+nums[0] = 7; // Assign the 1st element to 7
+nums[3] += 5; // Add 5 to the 4th element
+nums[4]++; // Increment the 5th element by 1 
+    </code></pre>
 
     <!-- Topic -->
     <h2><i class="far fa-bookmark topic-heading"></i> Length of an Array</h2>
