--- a/concept-pages/ds-intro.html
+++ b/concept-pages/ds-intro.html
@@ -58,7 +58,7 @@ let vowels = ["a", "e", "i", "o", "u"];
     <!-- OBJECTS -->
     <h2><i class="far fa-bookmark topic-heading"></i> Objects <em>(Associative Arrays)</em></h2>
     <hr>
-    <p>An object <em>(Associative Array)</em> is a collection of property-value pairs.</p>
+    <p>An object <em>(associative array)</em> is a collection of property-value pairs.</p>
     <pre><code class="lang-js">
 // One line definition of object
 let point = { x: 2, y: 3, label: "A"};
