--- a/concept-notes.html
+++ b/concept-notes.html
@@ -43,7 +43,11 @@
           <a href="/hacs/concept-pages/ds-array-basics.html">Array Basics</a>
         </div>
       </li>
-
+      <li>
+        <div class="li-div">
+          <a href="/hacs/concept-pages/ds-random-element.html">Random Element</a>
+        </div>
+      </li>
     </ol>
 
   </div> <!-- end .content -->
