--- a/concept-notes.html
+++ b/concept-notes.html
@@ -48,6 +48,11 @@
           <a href="/hacs/concept-pages/ds-random-element.html">Random Element</a>
         </div>
       </li>
+      <li>
+        <div class="li-div">
+          <a href="/hacs/concept-pages/ds-traverse-array.html">Traverse Array</a>
+        </div>
+      </li>
     </ol>
 
   </div> <!-- end .content -->
