--- a/concept-pages/point-in-circle.html
+++ b/concept-pages/point-in-circle.html
@@ -13,9 +13,11 @@
     <a class="back-link" href="/hacs/concept-notes.html"><i class="fas fa-angle-double-left"></i> Concept Notes</a>
 
     <!-- SECTION HEADER -->
-    <h1>Page Title</h1>
+    <h1>Point in Circle</h1>
 
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident, aperiam.</p>
+    <p>Use if statements to deterimine if a point is inside of a circle.</p>
+    <p>A point will be inside of a circle if the distance between the center of the circle and the point is less than
+      the radius of the circle.</p>
 
     <!--
     <h4>Linear Search Explanation (6:33)</h4>
