--- a/concept-notes.html
+++ b/concept-notes.html
@@ -45,7 +45,7 @@
       </li>
       <li>
         <div class="li-div">
-          <a href="/hacs/concept-pages/ds-random-element.html">Random Element</a>
+          <a href="/hacs/concept-pages/ds-random-element.html">Random Array Element</a>
         </div>
       </li>
       <li>
@@ -53,6 +53,12 @@
           <a href="/hacs/concept-pages/ds-traverse-array.html">Traverse Array</a>
         </div>
       </li>
+      <li>
+        <div class="li-div">
+          <a href="/hacs/concept-pages/ds-add-remove-array.html">Add/Remove Array Elements</a>
+        </div>
+      </li>
+
     </ol>
 
   </div> <!-- end .content -->
