play with icons

--- a/concept-notes.html
+++ b/concept-notes.html
@@ -35,17 +35,23 @@
     <ol class="pl">
       <li>
         <div class="li-div">
-          <a href="/hacs/concept-pages/ds-intro.html">Intro to Data Structures</a>
+          <a href="/hacs/concept-pages/ds-intro.html">
+            <i class="far fa-play-circle"></i>Intro to Data Structures
+          </a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="/hacs/concept-pages/ds-array-basics.html">Array Basics</a>
+          <a href="/hacs/concept-pages/ds-array-basics.html">
+            <i class="far fa-keyboard"></i>Array Basics
+          </a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="/hacs/concept-pages/ds-random-element.html">Random Array Element</a>
+          <a href="/hacs/concept-pages/ds-random-element.html">
+            <i class="fa-solid fa-note-sticky"></i>Random Array Element
+          </a>
         </div>
       </li>
       <li>
