--- a/concept-pages/ds-add-remove-array.html
+++ b/concept-pages/ds-add-remove-array.html
@@ -77,7 +77,7 @@ vowels.pop(); // ["a", "e", "i", "o", "u"]
     <!-- Topic -->
     <h2><i class="far fa-bookmark topic-heading"></i>array.splice()</h2>
     <hr>
-    <p>The <strong>splice</strong> method may add/or remove array elements at specific index.</p>
+    <p>The <strong>splice</strong> method may add/or remove array elements at specific indeX.</p>
     <pre><code class="lang-js">
 // Add and/or Remove array elements at a specific index 
 anArray.splice(index, howManyToRemove, item1, item2, ...);
