--- a/concept-notes.html
+++ b/concept-notes.html
@@ -36,21 +36,14 @@
       <li>
         <div class="li-div">
           <a href="/hacs/concept-pages/ds-intro.html">
-            <i class="far fa-play-circle"></i>Intro to Data Structures
+            Intro to Data Structures
           </a>
         </div>
       </li>
       <li>
         <div class="li-div">
           <a href="/hacs/concept-pages/ds-array-basics.html">
-            <i class="far fa-keyboard"></i>Array Basics
-          </a>
-        </div>
-      </li>
-      <li>
-        <div class="li-div">
-          <a href="/hacs/concept-pages/ds-random-element.html">
-            <i class="fa-solid fa-note-sticky"></i>Random Array Element
+            Array Basics
           </a>
         </div>
       </li>
