--- a/concept-pages/ds-array-basics.html
+++ b/concept-pages/ds-array-basics.html
@@ -72,10 +72,10 @@ let letterArray = ["a", "b", "c", "d"];
     <p>The value of an individual array element may be accessed using the index operator: [ ].</p>
     <pre><code class="lang-js">
 let letterArray = ["a", "b", "c", "d"];
-console.log("1st element at index 0 is: " + letterArray[0]);
-console.log("2nd element at index 1 is: " + letterArray[1]);
-console.log("3rd element at index 2 is: " + letterArray[2]);
-console.log("4th element at index 3 is: " + letterArray[3]);
+console.log(`1st element at index 0 is: ${letterArray[0]}.`);
+console.log(`2nd element at index 1 is: ${letterArray[1]}.`);
+console.log(`3rd element at index 2 is: ${letterArray[2]}.`);
+console.log(`4th element at index 3 is: ${letterArray[3]}.`);
 </code></pre>
 
     <!-- Topic -->
@@ -84,9 +84,9 @@ console.log("4th element at index 3 is: " + letterArray[3]);
     <p>The index operator may be used to reassign / modify array elements.</p>
     <pre><code class="lang-js">
 let nums = [1, 2, 3, 4, 5, 6];
-nums[0] = 7; // Assign the 1st element to 7
-nums[3] += 5; // Add 5 to the 4th element
-nums[4]++; // Increment the 5th element by 1 
+nums[0] = 7;  // [7, 2, 3, 4, 5, 6]
+nums[3] += 5; // [7, 2, 3, 9, 5, 6]
+nums[4]++;    // [7, 2, 3, 9, 6, 6]
     </code></pre>
 
     <!-- Topic -->
@@ -95,7 +95,7 @@ nums[4]++; // Increment the 5th element by 1
     <p>The length of an array may be determined using the length property.</p>
     <pre><code class="lang-js">
 let numArray = [1, 2, 3, 4, 5, 6, 7, 8];
-console.log("Length of numArray is: " + numArray.length);
+console.log(`Length of numArray is: ${numArray.length}.`);
     </code></pre>
 
   </div> <!-- end .content -->
