--- a/concept-notes.html
+++ b/concept-notes.html
@@ -35,16 +35,12 @@
     <ol class="pl">
       <li>
         <div class="li-div">
-          <a href="/hacs/concept-pages/ds-intro.html">
-            Intro to Data Structures
-          </a>
+          <a href="/hacs/concept-pages/ds-intro.html">Intro to Data Structures</a>
         </div>
       </li>
       <li>
         <div class="li-div">
-          <a href="/hacs/concept-pages/ds-array-basics.html">
-            Array Basics
-          </a>
+          <a href="/hacs/concept-pages/ds-array-basics.html">Array Basics</a>
         </div>
       </li>
       <li>
@@ -55,6 +51,11 @@
       <li>
         <div class="li-div">
           <a href="/hacs/concept-pages/ds-add-remove-array.html">Add/Remove Array Elements</a>
+        </div>
+      </li>
+      <li>
+        <div class="li-div">
+          <a href="/hacs/concept-pages/ds-create-arrays++.html">Create Arrays++</a>
         </div>
       </li>
 
