update ds notes

--- a/concept-notes.html
+++ b/concept-notes.html
@@ -25,7 +25,7 @@
   <nav></nav>
 
   <!-- MAIN HEADING -->
-  <h1 class="main-heading wrapper">Concept Notes</h1>
+  <h1 class="main-heading wrapper">JavaScript Reference</h1>
 
   <div class="content wrapper notes-content">
     <h2><i class="far fa-bookmark topic-heading"></i> Data Structures</h2>
@@ -56,6 +56,16 @@
       <li>
         <div class="li-div">
           <a href="/hacs/concept-pages/ds-create-arrays++.html">Create Arrays++</a>
+        </div>
+      </li>
+      <li>
+        <div class="li-div">
+          <a href="/hacs/concept-pages/ds-copy-compare-arrays.html">Copy & Compare Arrays</a>
+        </div>
+      </li>
+      <li>
+        <div class="li-div">
+          <a href="/hacs/concept-pages/ds-array-methods.html">Array Methods+</a>
         </div>
       </li>
 
