--- a/cs10.html
+++ b/cs10.html
@@ -1,1 +1,40 @@
-<h1>CS10</h1>
+<h1 class="main-heading">Computing Science 10</h1>
+
+<section>
+  <h2><i class="far fa-bookmark topic-heading"></i> HTML & CSS Basics</h2>
+  <hr>
+  <p>Learn the basics of <strong>HTML</strong> and <strong>CSS</strong> to build simple web pages.</p>
+  <div class="flex-container">
+    <div>
+      <h4>Video Lessons</h4>
+      <a href="#"><i class="far fa-play-circle fa-lg"></i> A really long video title</a>
+      <a href="#"><i class="far fa-play-circle fa-lg"></i> A really long video title</a>
+    </div>
+    <div>
+      <h4>Assignments</h4>
+      <a href="#"><i class="far fa-keyboard fa-lg"></i> Assignment 1</a>
+      <a href="#"><i class="far fa-keyboard fa-lg"></i> Assignment 1</a>
+      <a href="#"><i class="far fa-keyboard fa-lg"></i> Assignment 1</a>
+    </div>
+  </div>
+</section>
+
+<section>
+  <h2><i class="far fa-bookmark topic-heading"></i> JS IPO</h2>
+  <hr>
+  <p>Learn the basics of <strong>HTML</strong> and <strong>CSS</strong> to build simple web pages.</p>
+  <div class="flex-container">
+    <div>
+      <h4>Video Lessons</h4>
+      <a href="#"><i class="far fa-play-circle fa-lg"></i> A really long video title</a>
+      <a href="#"><i class="far fa-play-circle fa-lg"></i> A really long video title</a>
+      <a href="#"><i class="far fa-play-circle fa-lg"></i> A really long video title</a>
+      <a href="#"><i class="far fa-play-circle fa-lg"></i> A really long video title</a>
+    </div>
+    <div>
+      <h4>Assignments</h4>
+      <a href="#"><i class="far fa-keyboard fa-lg"></i> Assignment 1</a>
+      <a href="#"><i class="far fa-keyboard fa-lg"></i> Assignment 1</a>
+    </div>
+  </div>
+</section>
