--- a/cs10/test.html
+++ b/cs10/test.html
@@ -1,5 +1,23 @@
-<h1 id="head">Test</h1>
-<p>This is a test.</p>
-<p>
-  <a href="./">Link</a>
-</p>
+<h1 class="main-heading">Note Topic</h1>
+
+<section>
+  <!-- BACK LINK -->
+  <a class="back-link" href="./?js-notes"><i class="fas fa-angle-double-left"></i> JS Notes</a>
+
+  <h2><i class="far fa-bookmark topic-heading"></i> HTML & CSS Basics</h2>
+  <hr>
+  <p>Learn the basics of <strong>HTML</strong> and <strong>CSS</strong> to build simple web pages.</p>
+  <div class="flex-container">
+    <div>
+      <h4>Video Lessons</h4>
+      <a href="#"><i class="far fa-play-circle fa-lg"></i> A really long video title</a>
+      <a href="#"><i class="far fa-play-circle fa-lg"></i> A really long video title</a>
+    </div>
+    <div>
+      <h4>Assignments</h4>
+      <a href="#"><i class="far fa-keyboard fa-lg"></i> Assignment 1</a>
+      <a href="#"><i class="far fa-keyboard fa-lg"></i> Assignment 1</a>
+      <a href="#"><i class="far fa-keyboard fa-lg"></i> Assignment 1</a>
+    </div>
+  </div>
+</section>
