--- a/home.html
+++ b/home.html
@@ -1,4 +1,11 @@
-<h1>Home Page</h1>
-<p>
-  <a href="./?cs10/test">Link</a>
-</p>
+<main>
+  <div class="showcase">
+    <h1>Learn to Code.</h1>
+    <h2>What will you create?</h2>
+    <div class="courses">
+      <a href="./?cs10">CS 10</a>
+      <a href="./?cs20">CS 20</a>
+      <a href="./?cs30">CS 30</a>
+    </div>
+  </div>
+</main>
