--- a/cs10/test.html
+++ b/cs10/test.html
@@ -2,22 +2,14 @@
 
 <section>
   <!-- BACK LINK -->
-  <a class="back-link" href="./?js-notes"><i class="fas fa-angle-double-left"></i> JS Notes</a>
+  <a class="back-link" href="./?js-notes"
+    ><i class="fas fa-angle-double-left"></i> JS Notes</a
+  >
 
-  <h2><i class="far fa-bookmark topic-heading"></i> HTML & CSS Basics</h2>
-  <hr>
-  <p>Learn the basics of <strong>HTML</strong> and <strong>CSS</strong> to build simple web pages.</p>
-  <div class="flex-container">
-    <div>
-      <h4>Video Lessons</h4>
-      <a href="#"><i class="far fa-play-circle fa-lg"></i> A really long video title</a>
-      <a href="#"><i class="far fa-play-circle fa-lg"></i> A really long video title</a>
-    </div>
-    <div>
-      <h4>Assignments</h4>
-      <a href="#"><i class="far fa-keyboard fa-lg"></i> Assignment 1</a>
-      <a href="#"><i class="far fa-keyboard fa-lg"></i> Assignment 1</a>
-      <a href="#"><i class="far fa-keyboard fa-lg"></i> Assignment 1</a>
-    </div>
-  </div>
+  <!-- Code Sample -->
+  <h4 class="code-title">main.js</h4>
+  <pre><code class="lang-js">
+// Test Code
+Testing
+</code></pre>
 </section>
