page-content style

--- a/cs10/test.html
+++ b/cs10/test.html
@@ -1,15 +1,54 @@
 <h1 class="main-heading">Note Topic</h1>
 
-<section>
+<section class="page-content">
   <!-- BACK LINK -->
-  <a class="back-link" href="./?js-notes"
-    ><i class="fas fa-angle-double-left"></i> JS Notes</a
-  >
+  <div class="page-nav">
+    <a class="back-link" href="./?js-notes">
+      <i class="fas fa-angle-double-left"></i> JS Notes
+    </a>
+    <a href="#" class="yt-link">
+      <i class="fa-brands fa-youtube fa-lg"></i> Video Notes
+    </a>
+  </div>
+
+  <!-- TOPIC TITLE -->
+  <h2><i class="far fa-bookmark topic-heading"></i>Topic Title</h2>
+  <hr />
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit quae
+    recusandae dolores, exercitationem assumenda quidem?
+  </p>
 
   <!-- Code Sample -->
   <h4 class="code-title">main.js</h4>
   <pre><code class="lang-js">
 // Test Code
 Testing
-</code></pre>
+  </code></pre>
+
+  <!-- Summary -->
+  <h2><i class="far fa-list-alt summary"></i>Summary</h2>
+  <hr />
+  <ul>
+    <li>...</li>
+    <li>...</li>
+  </ul>
+
+  <!-- Check Your Understanding -->
+  <h2><i class="far fa-check-square check"></i>Check Your Understanding</h2>
+  <hr />
+  <p>
+    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit quae
+    recusandae dolores, exercitationem assumenda quidem?
+  </p>
+
+  <!-- Attention Box -->
+  <div class="attention-box">
+    <h4><i class="fas fa-exclamation-triangle attention"></i> Attention</h4>
+    <ul>
+      <li>...</li>
+      <li>...</li>
+    </ul>
+  </div>
+  <hr />
 </section>
