--- a/js-notes.html
+++ b/js-notes.html
@@ -1,14 +1,14 @@
 <h1 class="main-heading">JavaScript Notes</h1>
 
-<section class="notes-content">
+<section class="notes-list">
   <h2><i class="far fa-bookmark topic-heading"></i> Data Structures</h2>
-  <hr>
+  <hr />
   <p>Manage program data with Data Structures.</p>
 
-  <ol class="pl">
+  <ol>
     <li>
       <div class="li-div">
-        <a href="/hacs/concept-pages/ds-intro.html">Intro to Data Structures</a>
+        <a href="./?cs10/test">Intro to Data Structures</a>
       </div>
     </li>
     <li>
@@ -23,17 +23,23 @@
     </li>
     <li>
       <div class="li-div">
-        <a href="/hacs/concept-pages/ds-add-remove-array.html">Add/Remove Array Elements</a>
+        <a href="/hacs/concept-pages/ds-add-remove-array.html"
+          >Add/Remove Array Elements</a
+        >
       </div>
     </li>
     <li>
       <div class="li-div">
-        <a href="/hacs/concept-pages/ds-create-arrays++.html">Create Arrays++</a>
+        <a href="/hacs/concept-pages/ds-create-arrays++.html"
+          >Create Arrays++</a
+        >
       </div>
     </li>
     <li>
       <div class="li-div">
-        <a href="/hacs/concept-pages/ds-copy-compare-arrays.html">Copy & Compare Arrays</a>
+        <a href="/hacs/concept-pages/ds-copy-compare-arrays.html"
+          >Copy & Compare Arrays</a
+        >
       </div>
     </li>
     <li>
@@ -41,14 +47,13 @@
         <a href="/hacs/concept-pages/ds-array-methods.html">Array Methods+</a>
       </div>
     </li>
-
   </ol>
 
   <h2><i class="far fa-bookmark topic-heading"></i> Data Structures</h2>
-  <hr>
+  <hr />
   <p>Manage program data with Data Structures.</p>
 
-  <ol class="pl">
+  <ol>
     <li>
       <div class="li-div">
         <a href="/hacs/concept-pages/ds-intro.html">Intro to Data Structures</a>
@@ -66,7 +71,9 @@
     </li>
     <li>
       <div class="li-div">
-        <a href="/hacs/concept-pages/ds-add-remove-array.html">Add/Remove Array Elements</a>
+        <a href="/hacs/concept-pages/ds-add-remove-array.html"
+          >Add/Remove Array Elements</a
+        >
       </div>
     </li>
   </ol>
