--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./css/style.css" />
-    <link href="./css/prism.css" rel="stylesheet" />
+    <link rel="stylesheet" href="./css/prism.css" />
   </head>
 
   <body>
