--- a/cs10/test.html
+++ b/cs10/test.html
@@ -6,7 +6,7 @@
     <a class="back-link" href="./?js-notes">
       <i class="fas fa-angle-double-left"></i> JS Notes
     </a>
-    <a href="#" class="yt-link">
+    <a href="#" class="yt-link d-none">
       <i class="fa-brands fa-youtube fa-lg"></i> Video Notes
     </a>
   </div>
