--- a/js-notes.html
+++ b/js-notes.html
@@ -1,80 +1,45 @@
 <h1 class="main-heading">JavaScript Notes</h1>
 
 <section class="notes-list">
-  <h2><i class="far fa-bookmark topic-heading"></i> Data Structures</h2>
+  <h2><i class="far fa-bookmark topic-heading"></i> CS20 Concepts</h2>
   <hr />
-  <p>Manage program data with Data Structures.</p>
-
   <ol>
     <li>
       <div class="li-div">
-        <a href="./?cs10/test">Intro to Data Structures</a>
+        <a href="./?js-notes/function-basics">Function Basics</a>
       </div>
     </li>
     <li>
       <div class="li-div">
-        <a href="/hacs/concept-pages/ds-array-basics.html">Array Basics</a>
+        <a href="./?js-notes/function-basics">Benefits of Functions</a>
       </div>
     </li>
     <li>
       <div class="li-div">
-        <a href="/hacs/concept-pages/ds-traverse-array.html">Traverse Array</a>
+        <a href="./?js-notes/function-basics">Types of Data Structures</a>
       </div>
     </li>
     <li>
       <div class="li-div">
-        <a href="/hacs/concept-pages/ds-add-remove-array.html"
-          >Add/Remove Array Elements</a
-        >
+        <a href="./?js-notes/function-basics">Array Basics</a>
       </div>
     </li>
     <li>
       <div class="li-div">
-        <a href="/hacs/concept-pages/ds-create-arrays++.html"
-          >Create Arrays++</a
-        >
+        <a href="./?js-notes/function-basics">Create Arrays++</a>
       </div>
     </li>
     <li>
       <div class="li-div">
-        <a href="/hacs/concept-pages/ds-copy-compare-arrays.html"
-          >Copy & Compare Arrays</a
-        >
+        <a href="./?js-notes/function-basics">Copy & Compare Arrays</a>
       </div>
     </li>
     <li>
       <div class="li-div">
-        <a href="/hacs/concept-pages/ds-array-methods.html">Array Methods+</a>
+        <a href="./?js-notes/function-basics">Array Methods+</a>
       </div>
     </li>
   </ol>
 
-  <h2><i class="far fa-bookmark topic-heading"></i> Data Structures</h2>
-  <hr />
-  <p>Manage program data with Data Structures.</p>
 
-  <ol>
-    <li>
-      <div class="li-div">
-        <a href="/hacs/concept-pages/ds-intro.html">Intro to Data Structures</a>
-      </div>
-    </li>
-    <li>
-      <div class="li-div">
-        <a href="/hacs/concept-pages/ds-array-basics.html">Array Basics</a>
-      </div>
-    </li>
-    <li>
-      <div class="li-div">
-        <a href="/hacs/concept-pages/ds-traverse-array.html">Traverse Array</a>
-      </div>
-    </li>
-    <li>
-      <div class="li-div">
-        <a href="/hacs/concept-pages/ds-add-remove-array.html"
-          >Add/Remove Array Elements</a
-        >
-      </div>
-    </li>
-  </ol>
 </section>
