Update functions notes

--- a/js-notes.html
+++ b/js-notes.html
@@ -6,39 +6,55 @@
   <ol>
     <li>
       <div class="li-div">
-        <a href="./?js-notes/function-basics">Function Basics</a>
+        <a href="./?js-notes/define-invoke">Define & Invoke Functions</a>
       </div>
     </li>
     <li>
       <div class="li-div">
-        <a href="./?js-notes/function-basics">Benefits of Functions</a>
+        <a href="./?js-notes/variable-scope">Variable Scope</a>
       </div>
     </li>
     <li>
       <div class="li-div">
-        <a href="./?js-notes/function-basics">Types of Data Structures</a>
+        <a href="./?js-notes/params-args">Parameters & Arguments</a>
       </div>
     </li>
     <li>
       <div class="li-div">
-        <a href="./?js-notes/function-basics">Array Basics</a>
+        <a href="./?js-notes/return-values">Return Values</a>
       </div>
     </li>
     <li>
       <div class="li-div">
-        <a href="./?js-notes/function-basics">Create Arrays++</a>
+        <a href="./?js-notes/libraries">Libraries</a>
       </div>
     </li>
     <li>
       <div class="li-div">
-        <a href="./?js-notes/function-basics">Copy & Compare Arrays</a>
+        <a href="./?js-notes/types-of-ds">Types of Data Structures</a>
       </div>
     </li>
     <li>
       <div class="li-div">
-        <a href="./?js-notes/function-basics">Array Methods+</a>
+        <a href="./?js-notes/create-arrays">Create Arrays</a>
       </div>
     </li>
+    <li>
+      <div class="li-div">
+        <a href="./?js-notes/traverse-arrays">Traverse Arrays</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?js-notes/modify-arrays">Modify Arrays</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?js-notes/copy-comp-arrays">Copy & Compare Arrays</a>
+      </div>
+    </li>
+
   </ol>
 
 
