Finished functions notes

--- a/js-notes/define-invoke.html
+++ b/js-notes/define-invoke.html
@@ -14,7 +14,7 @@
   <!-- TOPIC TITLE -->
   <h2><i class="far fa-bookmark topic-heading"></i>Function = Block of Code</h2>
   <hr />
-  <img src="./img/functionsInputOutput.PNG" alt="">
+  <img class="img-fluid" src="./img/functionsInputOutput.PNG" alt="">
   <p>A <strong>function</strong> may be thought of as a <strong>named block of code</strong>. It stores code for future
     use.
   </p>
