--- a/js-notes.html
+++ b/js-notes.html
@@ -1,7 +1,7 @@
 <h1 class="main-heading">JavaScript Notes</h1>
 
 <section class="notes-list">
-  <h2><i class="far fa-bookmark topic-heading"></i> CS20 Concepts</h2>
+  <h2><i class="far fa-bookmark topic-heading"></i> Functions</h2>
   <hr />
   <ol>
     <li>
@@ -29,6 +29,12 @@
         <a href="./?js-notes/libraries">Libraries</a>
       </div>
     </li>
+  </ol>
+
+  <h2><i class="far fa-bookmark topic-heading"></i> Data Structures</h2>
+  <hr />
+
+  <ol>
     <li>
       <div class="li-div">
         <a href="./?js-notes/types-of-ds">Types of Data Structures</a>
@@ -54,8 +60,8 @@
         <a href="./?js-notes/copy-comp-arrays">Copy & Compare Arrays</a>
       </div>
     </li>
-
   </ol>
+
 
 
 </section>
