DS notes complete

--- a/js-notes.html
+++ b/js-notes.html
@@ -57,7 +57,7 @@
     </li>
     <li>
       <div class="li-div">
-        <a href="./?js-notes/copy-comp-arrays">Copy & Compare Arrays</a>
+        <a href="./?js-notes/copy-compare">Copy & Compare Arrays</a>
       </div>
     </li>
   </ol>
