--- a/js-notes.html
+++ b/js-notes.html
@@ -6,27 +6,27 @@
   <ol>
     <li>
       <div class="li-div">
-        <a href="./?js-notes/define-invoke">Define & Invoke Functions</a>
+        <a href="./?cs20-notes/define-invoke">Define & Invoke Functions</a>
       </div>
     </li>
     <li>
       <div class="li-div">
-        <a href="./?js-notes/variable-scope">Variable Scope</a>
+        <a href="./?cs20-notes/variable-scope">Variable Scope</a>
       </div>
     </li>
     <li>
       <div class="li-div">
-        <a href="./?js-notes/params-args">Parameters & Arguments</a>
+        <a href="./?cs20-notes/params-args">Parameters & Arguments</a>
       </div>
     </li>
     <li>
       <div class="li-div">
-        <a href="./?js-notes/return-values">Return Values</a>
+        <a href="./?cs20-notes/return-values">Return Values</a>
       </div>
     </li>
     <li>
       <div class="li-div">
-        <a href="./?js-notes/libraries">Libraries</a>
+        <a href="./?cs20-notes/libraries">Libraries</a>
       </div>
     </li>
   </ol>
@@ -37,31 +37,28 @@
   <ol>
     <li>
       <div class="li-div">
-        <a href="./?js-notes/types-of-ds">Types of Data Structures</a>
+        <a href="./?cs20-notes/types-of-ds">Types of Data Structures</a>
       </div>
     </li>
     <li>
       <div class="li-div">
-        <a href="./?js-notes/create-arrays">Create Arrays</a>
+        <a href="./?cs20-notes/create-arrays">Create Arrays</a>
       </div>
     </li>
     <li>
       <div class="li-div">
-        <a href="./?js-notes/traverse-arrays">Traverse Arrays</a>
+        <a href="./?cs20-notes/traverse-arrays">Traverse Arrays</a>
       </div>
     </li>
     <li>
       <div class="li-div">
-        <a href="./?js-notes/modify-arrays">Modify Arrays</a>
+        <a href="./?cs20-notes/modify-arrays">Modify Arrays</a>
       </div>
     </li>
     <li>
       <div class="li-div">
-        <a href="./?js-notes/copy-compare">Copy & Compare Arrays</a>
+        <a href="./?cs20-notes/copy-compare">Copy & Compare Arrays</a>
       </div>
     </li>
   </ol>
-
-
-
 </section>
