--- a/js-notes.html
+++ b/js-notes.html
@@ -1,6 +1,26 @@
 <h1 class="main-heading">JavaScript Notes</h1>
 
 <section class="notes-list">
+  <h2><i class="far fa-bookmark topic-heading"></i> JavaScript Fundamentals</h2>
+  <hr />
+  <ol>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/js-intro">Introduction</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/js-comments">Comments</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/dev-console">Developer Console</a>
+      </div>
+    </li>
+  </ol>
+
   <h2><i class="far fa-bookmark topic-heading"></i> Functions</h2>
   <hr />
   <ol>
