--- a/js-notes.html
+++ b/js-notes.html
@@ -1,12 +1,13 @@
 <h1 class="main-heading">JavaScript Notes</h1>
 
 <section class="notes-list">
+  <!-- JAVASCRIPT FUNDAMENTALS -->
   <h2><i class="far fa-bookmark topic-heading"></i> JavaScript Fundamentals</h2>
   <hr />
   <ol>
     <li>
       <div class="li-div">
-        <a href="./?cs10-notes/js-intro">Introduction</a>
+        <a href="./?cs10-notes/js-intro">Intro & How To</a>
       </div>
     </li>
     <li>
@@ -19,8 +20,65 @@
         <a href="./?cs10-notes/dev-console">Developer Console</a>
       </div>
     </li>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/variables-data">Variables & Data</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/number-data">Number Data</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/math-object">Math Object</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/string-data">String Data</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/prompt">Prompt()</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/ipo-algorithm">IPO Algorithm</a>
+      </div>
+    </li>
   </ol>
 
+  <!-- JS & HTML -->
+  <h2><i class="far fa-bookmark topic-heading"></i> JS & HTML</h2>
+  <hr />
+  <ol>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/getElementById">getElementById()</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/click-events">Click Events</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/innerHTML">innerHTML</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/input-elements">&lt;input&gt; Elements</a>
+      </div>
+    </li>
+  </ol>
+
+  <!-- FUNCTIONS -->
   <h2><i class="far fa-bookmark topic-heading"></i> Functions</h2>
   <hr />
   <ol>
@@ -51,6 +109,7 @@
     </li>
   </ol>
 
+  <!-- DATA STRUCTURES -->
   <h2><i class="far fa-bookmark topic-heading"></i> Data Structures</h2>
   <hr />
 
