--- a/cs10-notes/click-events.html
+++ b/cs10-notes/click-events.html
@@ -38,8 +38,9 @@ function greeting() {
   </p>
   <p>
     When we add a Click Event Listener to the document, we give the Event
-    Listener the name of a function to invoke/call when the event occurs. In
-    this case, the Event Listener will call the function named greeting.
+    Listener the name of a function to invoke/call when the provided event
+    occurs. In this case, the Event Listener will call the function named
+    greeting when the "click" event occurs.
   </p>
 
   <!-- ELEMENT EVENT LISTENER -->
