--- a/cs10-notes/ipo-algorithm.html
+++ b/cs10-notes/ipo-algorithm.html
@@ -30,6 +30,20 @@
   </ol>
 
   <pre><code class="lang-js">
+// SIMPLE GREETING (IPO Algorithm)
+
+// Input - ask user for name and time of day
+let name = prompt("Please enter your name:");
+let timeOfDay = prompt("Please enter the time of day:");
+
+// Process - use inputs to create greeting
+let greeting = `Hello ${name}. Have a great ${timeOfDay}!`;
+
+// Output - display greeting
+alert(greeting);
+  </code></pre>
+
+  <pre><code class="lang-js">
 // SIMPLE ADDITION CALCULATOR (IPO Algorithm)
 
 // Input - ask user for two numbers
