--- a/js-notes.html
+++ b/js-notes.html
@@ -42,6 +42,11 @@
     </li>
     <li>
       <div class="li-div">
+        <a href="./?cs10-notes/update-variables">Update Variables</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
         <a href="./?cs10-notes/prompt">Prompt()</a>
       </div>
     </li>
@@ -74,6 +79,22 @@
     <li>
       <div class="li-div">
         <a href="./?cs10-notes/input-elements">&lt;input&gt; Elements</a>
+      </div>
+    </li>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/modify-style">Modify Style</a>
+      </div>
+    </li>
+  </ol>
+
+  <!-- JS CONTROL STRUCTURES -->
+  <h2><i class="far fa-bookmark topic-heading"></i> JS CONTROL STRUCTURES</h2>
+  <hr />
+  <ol>
+    <li>
+      <div class="li-div">
+        <a href="./?cs10-notes/bool-expressions">Boolean Expressions</a>
       </div>
     </li>
   </ol>
